feat: route to delete datasource (#162)
* route to delete datasource

* replace "API KEY" by "DXC_KEY"
