# docs/swagger.json
@@ -116,6 +116,36 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete one datasource given a did",
+                "tags": [
+                    "datasources"
+                ],
+                "summary": "Delete one datasource",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Digital identifier of the datasource",
+                        "name": "did",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "datasource successfully deleted",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Error retrieving datasource from database",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/datasources": {
